<resources>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">Couldn\'t connect</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_action_pip_resize">Resize</string>
    <string name="accessibility_action_pip_stash">Stash</string>
    <string name="accessibility_action_pip_unstash">Unstash</string>
    <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
    <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_assistant_poodle">Voice search</string>
    <string name="accessibility_authenticate_hint">authenticate</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_banner_message_dismiss">Dismiss</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_level_with_estimate">Battery %1$s percent, about %2$s left based on your usage</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_unknown">Battery percentage unknown.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_on">Mobile Data On</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_control_change_favorite">favorite</string>
    <string name="accessibility_control_change_unfavorite">unfavorite</string>
    <string name="accessibility_control_favorite">Favorited</string>
    <string name="accessibility_control_favorite_position">Favorited, position %d</string>
    <string name="accessibility_control_move">Move to position %d</string>
    <string name="accessibility_control_move_down">Move down</string>
    <string name="accessibility_control_move_left">Move left</string>
    <string name="accessibility_control_move_right">Move right</string>
    <string name="accessibility_control_move_up">Move up</string>
    <string name="accessibility_control_not_favorite">Unfavorited</string>
    <string name="accessibility_control_zoom_in">Zoom in</string>
    <string name="accessibility_control_zoom_out">Zoom out</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">Data Saver is off</string>
    <string name="accessibility_data_saver_on">Data Saver is on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
    <string name="accessibility_desc_recent_apps">Overview.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="accessibility_desc_work_lock">Work lock screen</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">Adjust how colors display on your device. This can be helpful when you want to:&lt;br/&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt;&amp;nbsp;See colors more accurately&lt;/li&gt; &lt;li&gt;&amp;nbsp;Remove colors to help you focus&lt;/li&gt; &lt;/ol&gt;</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_divider">Split-screen divider</string>
    <string name="accessibility_enter_hint">enter device</string>
    <string name="accessibility_game_dashboard_entry">Enter game dashboard</string>
    <string name="accessibility_game_dashboard_shortcut_bar_fps">Frame rate per second</string>
    <string name="accessibility_game_dashboard_shortcut_bar_screenshot">Take a screenshot</string>
    <string name="accessibility_game_dashboard_shortcut_bar_start_recording">Start recording</string>
    <string name="accessibility_game_dashboard_shortcut_bar_undock">Undock</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="bubbles_user_education_got_it">Got it</string>
    <string name="bubbles_user_education_manage">Tap Manage to turn off bubbles from this app</string>
    <string name="bubbles_user_education_manage_title">Control bubbles anytime</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all_notifications_text">Clear all</string>
    <string name="got_it">Got it</string>
    <string name="lockscreen_shortcut_left">Left shortcut</string>
    <string name="lockscreen_shortcut_right">Right shortcut</string>
    <string name="lockscreen_unlock_left">Left shortcut also unlocks</string>
    <string name="lockscreen_unlock_right">Right shortcut also unlocks</string>
    <string name="manage_bubbles_text">Manage</string>
    <string name="manage_notifications_history_text">History</string>
    <string name="no_conversations_text">Your recent conversations will show up here</string>
    <string name="other">Other</string>
    <string name="priority_conversations">Priority conversations</string>
    <string name="recent_conversations">Recent conversations</string>
    <string name="screenrecord_audio_label">Record audio</string>
    <string name="screenrecord_description">While recording, Android System can capture any sensitive information that’s visible on your screen or played on your device. This includes passwords, payment info, photos, messages, and audio.</string>
    <string name="screenrecord_start">Start</string>
    <string name="screenrecord_start_label">Start Recording?</string>
    <string name="screenrecord_taps_label">Show touches on screen</string>
    <string name="select_conversation_text">Tap a conversation to add it to your Home screen</string>
    <string name="select_conversation_title">Conversation widgets</string>
    <string name="slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="slice_permission_text_1">- It can read information from %1$s</string>
    <string name="slice_permission_text_2">- It can take actions inside %1$s</string>
</resources>