<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/text2" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/slice_permission_text_1" android:paddingStart="8dp"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/text1" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/slice_permission_text_2" android:paddingStart="8dp"/>
    <CheckBox android:id="@+id/slice_permission_checkbox" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/slice_permission_checkbox"/>
</LinearLayout>
