<?xml version="1.0" encoding="utf-8"?>
<com.google.android.systemui.gamedashboard.ShortcutBarView xmlns:android="http://schemas.android.com/apk/res/android" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.systemui.gamedashboard.RevealButton android:id="@+id/reveal" android:layout_width="@dimen/game_dashboard_shortcut_bar_reveal_button_width" android:layout_height="@dimen/game_dashboard_shortcut_bar_reveal_button_height" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_undock"/>
    <com.google.android.systemui.gamedashboard.ShortcutBarContainer android:orientation="vertical" android:id="@+id/expanded_bar" android:visibility="invisible" android:layout_width="48dp" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <com.google.android.systemui.gamedashboard.ShortcutBarButton android:id="@+id/entry_point" android:background="@drawable/game_dashboard_button_background" android:padding="8dp" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_margin="4dp" android:src="@drawable/ic_game_mode_standard" android:scaleType="centerCrop" android:tint="#ffffff" android:contentDescription="@string/accessibility_game_dashboard_entry" android:backgroundTint="#99000000"/>
        <com.google.android.systemui.gamedashboard.ShortcutBarButton android:id="@+id/screenshot" android:background="@drawable/game_dashboard_button_background" android:padding="8dp" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_margin="4dp" android:src="@drawable/ic_screenshot" android:scaleType="centerCrop" android:tint="#ffffff" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_screenshot" android:backgroundTint="#99000000"/>
        <com.google.android.systemui.gamedashboard.ShortcutBarButton android:id="@+id/record" android:background="@drawable/game_dashboard_button_background" android:padding="8dp" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_margin="4dp" android:src="@drawable/ic_screen_record" android:scaleType="centerCrop" android:tint="#ffffff" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_start_recording" android:backgroundTint="#99000000"/>
        <TextView android:textSize="16sp" android:textColor="#ffffff" android:gravity="center" android:id="@+id/fps" android:background="@drawable/game_dashboard_button_background" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_margin="4dp" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_fps" android:backgroundTint="#99000000"/>
    </com.google.android.systemui.gamedashboard.ShortcutBarContainer>
</com.google.android.systemui.gamedashboard.ShortcutBarView>
