<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/manage_education_view" android:background="@drawable/bubble_stack_user_education_bg" android:paddingTop="28dp" android:paddingBottom="16dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/bubble_expanded_view_padding" android:paddingEnd="48dp" android:layout_marginEnd="24dp">
    <TextView android:textAppearance="@android:style/TextAppearance.DeviceDefault.Display1" android:textColor="@android:color/Teal_700" android:ellipsize="end" android:gravity="start" android:id="@+id/user_education_title" android:paddingBottom="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bubbles_user_education_manage_title" android:maxLines="2" android:fontFamily="@android:string/config_defaultNetworkRecommendationProviderPackage" android:textAlignment="viewStart" android:paddingStart="16dp"/>
    <TextView android:textAppearance="@android:style/TextAppearance.DeviceDefault.Body1" android:textColor="@android:color/Teal_700" android:ellipsize="end" android:gravity="start" android:id="@+id/user_education_description" android:paddingBottom="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bubbles_user_education_manage" android:maxLines="2" android:fontFamily="@android:string/config_defaultNearbySharingComponent" android:textAlignment="viewStart" android:paddingStart="16dp"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/button_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.android.wm.shell.common.AlphaOptimizedButton android:textColor="@android:color/Teal_700" android:layout_gravity="start" android:id="@+id/manage" android:focusable="true" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_bubbles_text" style="@android:style/Widget.Material.Button.Borderless"/>
        <com.android.wm.shell.common.AlphaOptimizedButton android:textColor="@android:color/Teal_700" android:layout_gravity="start" android:id="@+id/got_it" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bubbles_user_education_got_it" style="@android:style/Widget.Material.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>
