<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/rounded_bg_full" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="26dp" android:paddingBottom="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:layout_width="@dimen/screenrecord_logo_size" android:layout_height="@dimen/screenrecord_logo_size" android:src="@drawable/ic_screenrecord" android:tint="@color/screenrecord_icon_color"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:layout_marginBottom="15dp" android:text="@string/screenrecord_start_label" android:fontFamily="@android:string/config_screenshotErrorReceiverComponent"/>
                <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="?android:attr/textColorSecondary" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/screenrecord_description"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:layout_width="@dimen/screenrecord_option_icon_size" android:layout_height="@dimen/screenrecord_option_icon_size" android:layout_marginRight="@dimen/screenrecord_option_padding" android:src="@drawable/ic_mic_26dp" android:tint="?android:attr/textColorSecondary" android:layout_weight="0"/>
                    <Spinner android:id="@+id/screen_recording_options" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="48dp" android:popupBackground="@drawable/screenrecord_spinner_background" android:prompt="@string/screenrecord_audio_label" android:layout_weight="1" android:dropDownWidth="274dp"/>
                    <Switch android:layout_gravity="end" android:id="@+id/screenrecord_audio_switch" android:layout_width="wrap_content" android:layout_height="48dp" android:minWidth="48dp" android:layout_weight="0" android:contentDescription="@string/screenrecord_audio_label" style="@style/ScreenRecord.Switch"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/screenrecord_option_padding">
                    <ImageView android:layout_gravity="center" android:layout_width="@dimen/screenrecord_option_icon_size" android:layout_height="@dimen/screenrecord_option_icon_size" android:layout_marginRight="@dimen/screenrecord_option_padding" android:src="@drawable/ic_touch" android:tint="?android:attr/textColorSecondary" android:layout_weight="0"/>
                    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="48dp" android:text="@string/screenrecord_taps_label" android:layout_weight="1" android:importantForAccessibility="no" android:fontFamily="@android:string/config_screenshotErrorReceiverComponent"/>
                    <Switch android:id="@+id/screenrecord_taps_switch" android:layout_width="wrap_content" android:layout_height="48dp" android:minWidth="48dp" android:layout_weight="0" android:contentDescription="@string/screenrecord_taps_label" style="@style/ScreenRecord.Switch"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp">
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="14sp" android:textColor="?android:attr/textColorPrimary" android:layout_gravity="start" android:id="@+id/button_cancel" android:background="@drawable/screenrecord_button_background_outline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="0"/>
                <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="14sp" android:textColor="@android:color/Teal_700" android:layout_gravity="end" android:id="@+id/button_start" android:background="@drawable/screenrecord_button_background_solid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screenrecord_start" android:layout_weight="0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
