<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/top_level" android:padding="24dp" android:layout_width="match_parent" android:layout_height="match_parent" android:clipToOutline="true">
    <TextView android:textAppearance="@android:style/TextAppearance.DeviceDefault.Headline" android:textSize="24sp" android:textColor="?android:attr/textColorPrimary" android:gravity="center" android:id="@+id/select_conversation_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_conversation_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="@android:style/TextAppearance.DeviceDefault.Headline" android:textSize="16sp" android:textColor="?android:attr/textColorPrimary" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/select_conversation" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/no_conversations_text" android:layout_below="@+id/select_conversation_title"/>
    <Button android:textColor="?android:^attr-private/toLeft" android:layout_gravity="center" android:id="@+id/got_it_button" android:background="@drawable/rounded_bg_full_large_radius" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="60dp" android:text="@string/got_it" android:layout_alignParentBottom="true" android:onClick="dismissActivity" style="?android:attr/buttonBarButtonStyle"/>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/got_it_button" android:layout_below="@+id/select_conversation" android:layout_centerInParent="true" android:clipToOutline="true">
        <LinearLayout android:layout_gravity="center" android:id="@+id/widget_initial_layout" android:background="@drawable/rounded_bg_full_large_radius" android:layout_width="200dp" android:layout_height="100dp" android:layout_above="@+id/got_it_button">
            <include layout="@layout/people_space_placeholder_layout"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
